Policy Cilium/Policy Cilium l3-4/ad-policy-lv34.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "rule-ad-lv34"
spec:
  description: "L3-L4 policy for the adservice"
  endpointSelector:
    matchLabels:
      app: adservice
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: frontend  
    toPorts:
    - ports:
      - port: "9555"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
