Policy Cilium/Policy Cilium l3-4/checkout-policy-lv34.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "rule-ckout-lv34"
spec:
  description: "L3-L4 policy for the checkoutservice"
  endpointSelector:
    matchLabels:
      app: checkoutservice
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: frontend
    toPorts:
    - ports:
      - port: "5050"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        app: productcatalogservice
    toPorts:
    - ports:
      - port: "3550"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        app: currencyservice
    toPorts:
    - ports:
      - port: "7000"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        app: emailservice
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        app: shippingservice
    toPorts:
    - ports:
      - port: "50051"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        app: paymentservice
    toPorts:
    - ports:
      - port: "50051"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        app: cartservice
    toPorts:
    - ports:
      - port: "7070"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
